@@ -161,6 +161,7 @@ extern "C" {
 #include <freeipmi/spec/oem/ipmi-oem-wistron-spec.h>
 #include <freeipmi/spec/oem/ipmi-sensor-and-event-code-tables-oem-dell-spec.h>
 #include <freeipmi/spec/oem/ipmi-sensor-and-event-code-tables-oem-fujitsu-spec.h>
+#include <freeipmi/spec/oem/ipmi-sensor-and-event-code-tables-oem-gigabyte-spec.h>
 #include <freeipmi/spec/oem/ipmi-sensor-and-event-code-tables-oem-hp-spec.h>
 #include <freeipmi/spec/oem/ipmi-sensor-and-event-code-tables-oem-intel-node-manager-spec.h>
 #include <freeipmi/spec/oem/ipmi-sensor-and-event-code-tables-oem-intel-spec.h>
