@@ -13,6 +13,8 @@
 	* libfreeipmi/include/spec/: Add Gigabyte IANA manufacturer macro
 	and Product MD90-FS0-ZB macro.
 
+	* libfreeipmi/sel/: Add Gigabyte MD90-FS0-ZB OEM SEL support.
+
 2016-07-29 Albert Chu <chu11@llnl.gov>
 
 	* ipmi-oem/: Support get/set-bmc-services for Intel motherboards.
